--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,12 @@ dependencies {
     implementation 'com.google.mlkit:vision-common:17.3.0'
     implementation 'com.google.android.gms:play-services-tasks:18.0.2'
     implementation project(path: ':openCV')
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.8'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // Use this dependency to bundle the model with your app
     implementation 'com.google.mlkit:face-detection:16.1.5'
+    implementation 'com.google.mlkit:face-mesh-detection:16.0.0-beta1'
 
 }
